--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
-~ $ cd kqallidus.github.io
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" xmlns:lr="http://adobe.com/lrg/0.0"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" xmlns:lr="http://adobe.com/lrg/0.0"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" xmlns:lr="http://adobe.com/lrg/0.0"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" xmlns:lr="http://adobe.com/lrg/0.0"> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Lightroom Gallery</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="dad/assets/css/normalize.css">
+        <link rel="stylesheet" type="text/css" href="dad/assets/css/main.css">
+        <link rel="stylesheet" type="text/css" media="screen" title="Custom Settings" href="dad/assets/css/custom.css" >
+        <script src="dad/assets/js/libs/modernizr.custom.23122.js"></script>
+        <link rel="alternate" type="text/html" href="dad/index.html">
+    </head>
+~  $ cd kqallidus.github.io
 
 ~ $ echo "Hello World" > index.html
